Proyectos/Proyecto2/k8s/consumer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: so1-p14
spec:
  replicas: 2
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: lalogg/p2_so1_p14_consumer_kafka:latest
        resources:
          limits:
            cpu: "0.4"
            memory: "700Mi"
