Proyectos/Proyecto2/k8s/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
  namespace: so1-p14
  labels:
    app: mongo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
        resources:
          limits:
            cpu: "0.5"
            memory: "500Mi"
          requests:
            cpu: "0.3"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: so1-p14
spec:
  type: LoadBalancer
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo-db
