Proyectos/Proyecto2/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: so1-proyecto2-ingress
  namespace: so1-p14
spec:
  ingressClassName: nginx
  rules:
  - host: 34.121.114.9.nip.io
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: grpc-client-service
            port:
              number: 3000
        path: /sendData
